# PipelineLab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  debug_routes.py  debug_tests.py  get_user_id.py  list_all_presets.py  preload_models.py  pyproject.toml  reproduce_preset_error.py  requirements.txt  test_execute_api.py  verify_config.py  verify_preview.py  verify_rerank.py  verify_state.py
backend/alembic/: env.py
backend/alembic/versions/: 20260129_001_init_schema.py  20260211_1717_948b001560d1_add_preset_model_and_update_pipeline.py  20260211_1724_c1dd1f59d814_change_array_to_jsonb_take_2.py  20260211_1754_59791fc8d3c3_initial_migration.py  20260213_1205_b3d9f1e7a2b0_add_fulltext_search.py  20260404_0001_a1b2c3d4e5f6_add_analysis_persistence.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  database.py  errors.py  logging.py  middleware.py  rate_limit.py
backend/app/models/: __init__.py  base.py  models.py
backend/app/presets/: general_qa.json  (+9 more)
backend/scripts/: create_enums.py  evaluate_retrieval.py  fix_column_type.py  init_presets.py
backend/tests/: conftest.py  generate_fixtures.py  test_chunking_methods.py  test_code_generator.py  test_cost_calculator.py  test_document_analyzer.py  test_e2e_integration.py  test_embedding_providers.py  test_fingerprinting.py  test_hybrid_search.py  test_pipeline_executor.py  test_pipeline_recommender.py  test_preset_service.py  test_query_augmentation.py  test_rerankers.py  test_reranking.py  test_retrievers.py  test_strategy_guide.py  test_suggestions.py  validate_semantic_chunking.py
(+236 files in other folders)
