[project]
name = "pipelinelab-backend"
version = "0.1.0"
description = "PipelineLab - Visual RAG pipeline builder and evaluator"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Logging
    "structlog>=24.1.0",

    # HTTP Client
    "httpx>=0.26.0",

    # LLM (unified provider access)
    "litellm>=1.30.0",

    # LangChain & AI
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "openai>=1.10.0",

    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=0.8.11",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sentence-transformers>=2.3.0",
    "cohere>=5.20.0",
    "rank-bm25>=0.2.2",
    "spacy>=3.7.0",
    "numpy>=1.26.0",

    # Document Analysis
    "transformers>=4.35.0",
    "torch>=2.1.0",

    # WebSocket
    "python-socketio>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
